<resources>
    <string name="app_name">IDKControllIWIllEndUpFinishingAnyway</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Blank</string>
    <string name="witness_me">Witness me</string>
    <string name="refresh">Refresh</string>
    <string name="pairing">Pairing...</string>
    <string name="bluetooth_logo">Bluetooth logo</string>
    <string name="enabledindicator">enabledIndicator</string>
    <string name="indicator">Indicator</string>
    <string name="background">background</string>
    <string name="provicepermission">Provice permission</string>
    <string name="first">First</string>
    <string name="second">Second</string>
    <string name="submit">Submit</string>
    <string name="message">Message</string>
</resources>