<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="80dp">

    <ImageView
        android:id="@+id/controllerBackground"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="6dp"
        android:contentDescription="@string/background"
        android:src="@drawable/shape_border"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/controllerNameTv"

        android:textColor="@color/white"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:maxHeight="66dp"
        android:layout_marginStart="6dp"
        android:layout_marginEnd="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/selectFirstBtn"
        app:layout_constraintStart_toStartOf="@id/controllerBackground"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/selectFirstBtn"
        android:text="@string/first"

        android:backgroundTint="@color/material_dynamic_primary0"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginEnd="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/selectSecondBtn"
        app:layout_constraintStart_toEndOf="@id/controllerNameTv"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/selectSecondBtn"
        android:text="@string/second"

        android:backgroundTint="@color/material_dynamic_primary0"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/controllerInd"
        app:layout_constraintStart_toEndOf="@id/selectFirstBtn"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/controllerInd"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:contentDescription="@string/indicator"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        app:layout_constraintEnd_toEndOf="@id/controllerBackground"
        app:layout_constraintStart_toEndOf="@+id/selectSecondBtn"
        app:layout_constraintBottom_toTopOf="@id/controllerIdTv"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/shape_accent_circle" />

    <TextView
        android:id="@+id/controllerIdTv"

        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/selectSecondBtn"
        app:layout_constraintEnd_toEndOf="@id/controllerBackground"
        app:layout_constraintTop_toBottomOf="@+id/controllerInd" />

</androidx.constraintlayout.widget.ConstraintLayout>